Improvements to the cash withdrawal function

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,33 +9,33 @@ services:
       - "5400:5432"
     environment:
       - POSTGRES_DB="bank_operations"
-      - POSTGRES_USER="postgres"
+      - POSTGRES_USER="hallecraft"
       - POSTGRES_PASSWORD="manager123"
+      - POSTGRES_ENABLE_SSL="NO"
     volumes:
       - data_bank_operations:/var/lib/postgresql/data  
     networks:
-      - backend
+      - bo-networks
     ### Golang Web API ###
-  golang:
-    container_name: "bank-operations-api"
-    image: ea7f935977ea
+  bo-api:
+    image: golang
     depends_on:
       - bo-db
     environment:
-      - DB_USERNAME="postgres"
+      - DB_USERNAME="hallecraft"
       - DB_PASSWORD="manager123"
       - DB_DB="bank_operations"
       - DB_HOST="bo-db"
       - DB_PORT="5432"
     ports:
-      - 6000:6000
+      - 8000:8000
     networks:
-      - backend
+      - bo-networks
 
 volumes:
   data_bank_operations:
 
 networks:
-  backend:
+  bo-networks:
     driver: bridge
       
